<!--タグ-->
<resources>
    <string name="app_name">UranaiApp</string>

    <string name="main_txv_title">💛Your fortune💛</string>
    <string name="main_prologue">今日はどんないいことがあるかな？</string>

    <string name="main_prologue2"> 一日の運勢を占っちゃおう❤️</string>

    <string name="main_txv_name">名前</string>
    <string name="main_txv_birthday">生年月日</string>
    <string name="main_txv_year">年</string>
    <string name="main_txv_month">月</string>
    <string name="main_txv_day">日</string>
    <string name="main_txv_gender">性別</string>

    <!--Buttonに表示する文字列-->
    <string name="main_btn_divine">占う</string>
    <string name="main2_btn_divine">占わない</string>
    <string name="main3_btn_divine">もう一度！</string>
    <string name="main4_btn_divine">TOPへ戻る</string>

    <!--性別データ-->
    <string name="main_radio_btn_male">男性</string>
    <string name="main_radio_btn_female">女性</string>
    <!--生年月日の年号データ-->
    <string-array name="main_spn_era">
        <item>明治</item>
        <item>大正</item>
        <item>昭和</item>
        <item>平成</item>
    </string-array>

    <!--結果画面-->
    <string name="main_txv_result">💫今日の運勢💫</string>
    <string name="main_txv_lucky">💫ラッキーアイテム💫</string>
    <!--えーーー-->
    <string name="main_txv_not">えーーーー！😢😢😢</string>
    <!--占い結果データ-->
    <string-array name="result_txv_divine_date">
        <item>いいことが起きるでしょう！</item>
        <item>最悪の1日になるでしょう！</item>
        <item>微妙な1日になるでしょう！</item>
        <item>普通の1日になるでしょう！</item>
        <item>大きな決断をするでしょう！</item>
        <item>異性に告白されるでしょう！</item>
        <item>落とし物をするでしょう！</item>
        <item>忘れ物をするでしょう！</item>
        <item>問題を解決できるでしょう！</item>
        <item>リストラされるでしょう！</item>
    </string-array>

    <!--ラッキーアイテムデータ-->
    <string-array name="result_txv_divineItem_data">
        <item>青い傘</item>
        <item>白い帽子</item>
        <item>赤い靴</item>
        <item>白い靴下</item>
        <item>白い靴</item>
        <item>水玉のワンピース</item>
        <item>リップクリーム</item>
        <item>日傘</item>
        <item>パールのイヤリング</item>
        <item>大きいサングラス</item>
    </string-array>


</resources><!--<resources>と</resources>ではさむ。タグの終わり-->