<?xml version="1.0" encoding="utf-8"?>
<!--ここでデザインをする    -->
<!--layout_width:幅-->
<!--layout_height:高さ-->
<!--orientation:方向(縦か横)-->
<!--padding:空白(上下左右全てに空白)-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    android:weightSum="1"
    android:orientation="vertical"
    android:scrollIndicators="end|right">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_title"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/title_textSize"
        android:layout_marginTop="@dimen/title_marginTop"
        android:textIsSelectable="false" />


    <!--textAppearance:文字のスタイル（斜体、太字、大きさなど）-->
    <!--textAppearanceLarge：文字を大きくします-->

    <TextView
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:text="@string/main_prologue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:textColor="#5a5959"
        android:textSize="17dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_prologue2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:textColor="#5a5959"
        android:textSize="17dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal" />


<!---->
    <!--android:inputType：どういう形式で入力するか。今回は人の名前-->
    <!--android:ems="10":emsは入力文字数-->
    <!--android:id="@+id/main_etx_name":idは識別子といういみ、今回のidはmain_etx_name

    （プログラムから呼び出すのに必要）<EditTextとは入力欄を作るのに使う-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="名前を入力してください"
        android:ems="10"
        android:id="@+id/main_etx_name"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_birthday"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal" />
    <!--年号のデータ設定のコンボボックスを作る。-->
    <Spinner
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/main_spn_era"
        android:entries="@array/main_spn_era"
        android:layout_gravity="center_horizontal"
        android:scrollIndicators="left" />
<!--ここから中にリニアレイアウトを作る-->
    <LinearLayout
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="2"
            android:id="@+id/main_etX_year"
            android:layout_weight="0.56" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_txv_year"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_vertical" />
        <EditText
            android:layout_width="31dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="2"
            android:id="@+id/main_etX_month"
            android:layout_gravity="center_vertical" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_txv_month"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_vertical" />
        <EditText
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="2"
            android:id="@+id/main_etX_day"
            android:layout_gravity="center_vertical" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_txv_day"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <!--性別はリニアレイアウトの外-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_gender"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
<!--ラジオボタンをつくる！-->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/main_rd_grp"
        android:layout_gravity="center_horizontal">

<!--男性デフォルトでチェック入れました        -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_radio_btn_male"
            android:id="@+id/main_rd_btn_male"
            android:checked="true"/>
        <!--女性-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_radio_btn_female"
            android:id="@+id/main_rd_btn_female"/>

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_divine"
            android:id="@+id/main_btn_divine"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main2_btn_divine"
            android:id="@+id/main_btn_not"
            android:layout_weight="1" />
    </LinearLayout>
    <!--デヴァイン・・・占う-->
</LinearLayout>