<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    android:weightSum="1"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_result"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/title_textSize"
        android:layout_marginBottom="30dp"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/result_txv_name"
            android:text="ここに氏名"
            android:layout_gravity="left"
            android:layout_weight="0.19"
            android:textIsSelectable="false" />





    <TextView
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/result_txv_divine"
        android:text="ここに占い結果が表示されます。"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_txv_lucky"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/result_txv_item"
        android:text="ここにラッキーアイテム"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:text="@string/main3_btn_divine"
            android:id="@+id/result_btn_retry"
            android:layout_weight="0.17" />

    </LinearLayout>

</LinearLayout>
